--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -45,7 +45,7 @@ jobs:
          with:
            path: ${{ steps.setup.outputs.image32 }}
            key: ${{ steps.setup.outputs.image32 }}
-       - name: Build openHABian images
+       - name: Build storm.house images
          id: build
          run: |
            sudo -E ./tests/ci-setup.bash github ${{ github.ref_name }}
@@ -58,14 +58,21 @@ jobs:
            #sed -i -e "s|^userpw=.*$|userpw=\"${{secrets.USERPW}}\"|g" build-image/openhabian.pi-raspios64.conf
            sed -i -e "s|ap_password:.*$|ap_password: ${{secrets.HOTSPOTPW}}|g" includes/comitup.conf
            cp build-image/template_rpi-imager-openhab.json rpi-imager-openhab.json
-           sudo -E ./build.bash rpi
+           sudo -E ./build.bash rpi oldstable
+           sudo -E ./build.bash rpi64 oldstable
            echo "image32=$(ls openhabian-pi-raspios32*.img.xz)" >> $GITHUB_OUTPUT
+           echo "image64=$(ls openhabian-pi-raspios64*.img.xz)" >> $GITHUB_OUTPUT
            echo "json_image=$(ls rpi-imager-openhab.json)" >> $GITHUB_OUTPUT
-       - name: Archive openHABian 32bit image
+       - name: Archive storm.house 32bit image
          uses: actions/upload-artifact@v3
          with:
            name: ${{ steps.build.outputs.image32 }}
            path: ${{ steps.build.outputs.image32 }}
+       - name: Archive storm.house 64bit image
+         uses: actions/upload-artifact@v3
+         with:
+           name: ${{ steps.build.outputs.image64 }}
+           path: ${{ steps.build.outputs.image64 }}
        - name: Create release template
          if: ${{ success() && github.ref_type == 'tag' && startsWith(github.ref_name, 'v') }}
          uses: "marvinpinto/action-automatic-releases@v1.2.1"
@@ -77,3 +84,4 @@ jobs:
            draft: true
            files: |
              ${{ steps.build.outputs.image32 }}
+             ${{ steps.build.outputs.image64 }}
